# MCP_VScode_extension

./: CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  run_all.sh
backend/: .env  Dockerfile  agent_controller.py  docker-compose.yml  ollama_entrypoint.sh  pyproject.toml  requirements.txt  run_controller.sh  tools.py
backend/agents_orchestration_utils/: autogen_config.py  mcp_sse_connection.py  stop_llm.py
backend/coding_agent/: coding_client.py  coding_server.py  run.sh
backend/file_agent/: docker-compose.yml  file_client.py  file_server.py  run.sh
backend/git_agent/: git_client.py  git_server.py  run.sh
backend/llm_choice/: llm_client.py
src/: extension.ts
src/webview/: main.js  style.css
